# hedera-zk-poc

./: README.md
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
methods/src/: lib.rs
tests/: CommitmentVerification.t.sol
