[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "0.7.4", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = "0.7.4"
risc0-zkvm = {  version = "0.21", default-features = false, features = ['std'] }
bls-signatures = "0.15.0"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = "thin"
